corrects collapse menu and fixes bootstrap order. Adds some more to transaction form

--- a/Expenses/public/css/style.css
+++ b/Expenses/public/css/style.css
@@ -2,9 +2,7 @@ html {
   position: relative;
   min-height: 100%;
 }
-body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
-}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -33,4 +31,11 @@ body {
   width:30%;
 }
 
+form{
+  padding: 15px;
+}
 
+button{
+  float:right;
+  margin: 10px;
+}
